Media Controls: don't "cut" controls if fully hidden.

A media element might be outside of the page and can't be accessed and
for some reasons would have the controls enabled. Instead of having a
DCHECK, we should early return and use the default value.

BUG=664097
R=eae@chromium.org

Review-Url: https://codereview.chromium.org/2499013003
Cr-Commit-Position: refs/heads/master@{#433219}

Former-commit-id: 467481c23e2c416c34e5d4a34766d59a5aeefcf2